--- a/Drivers-Android-App/app/src/main/res/layout/activity_login.xml
+++ b/Drivers-Android-App/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:src="@drawable/logo_blue"
+                android:src="@drawable/logo_white"
                 android:layout_marginTop="40dp"/>
 
             <TextView
