--- a/Drivers-Android-App/app/src/main/res/layout/fragment_home.xml
+++ b/Drivers-Android-App/app/src/main/res/layout/fragment_home.xml
@@ -182,7 +182,7 @@
                 android:id="@+id/dashWeather"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Today's weather will update once\nwe have the location...\n\n"
+                android:text="Орнымыз анықталған соң\n бүгіннің ауа райы жаңартылады...\n\n"
                 android:layout_margin="12dp"
                 android:textSize="16sp"
                 android:textColor="#000000"
@@ -214,7 +214,7 @@
                 android:id="@+id/dashLastCon"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Last connected"
+                android:text="Соңғы қосылым"
                 android:layout_margin="12dp"
                 android:textSize="16sp"
                 android:textColor="#000000"
@@ -252,7 +252,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Your position"
+                android:text="Локация"
                 android:layout_margin="12dp"
                 android:textSize="16sp"
                 android:textColor="#000000"
@@ -266,7 +266,7 @@
                 android:layout_width="120dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
-                android:text="Focus" />
+                android:text="Фокус" />
 
             <com.google.android.gms.maps.MapView
                 android:id="@+id/mapView"
