--- a/API-and-Admin-Panel/App/App/AdminPanel/templates/login.html
+++ b/API-and-Admin-Panel/App/App/AdminPanel/templates/login.html
@@ -25,22 +25,22 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
           <div class="card-body">
-            <h5 class="card-title text-center"><strong>Admin System</strong></h5>
+            <h5 class="card-title text-center"><strong>Администратор  жүйесі</strong></h5>
             <form class="form-signin" action="" method="post">
               <div class="form-label-group">
                 <input type="text" id="inputEmail" name="username" class="form-control" placeholder="Username" required autofocus>
-                <label for="inputEmail">Username</label>
+                <label for="inputEmail">Пайдаланушы аты</label>
               </div>
 
               <div class="form-label-group">
                 <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required>
-                <label for="inputPassword">Password</label>
+                <label for="inputPassword">Құпиясөз</label>
               </div>
 
               <div class="custom-control custom-checkbox mb-3">
                 <label style="color:red;">{{ error_message }}</label>
               </div>
-              <input class="btn btn-lg btn-primary submitBtn btn-block text-uppercase" type="submit" name="loginBtn" value="Sign In">
+              <input class="btn btn-lg btn-primary submitBtn btn-block text-uppercase" type="submit" name="loginBtn" value="Кіру">
             </form>
           </div>
         </div>
