--- a/API-and-Admin-Panel/App/App/AdminPanel/templates/main.html
+++ b/API-and-Admin-Panel/App/App/AdminPanel/templates/main.html
@@ -266,13 +266,13 @@
                   </div>
                   <div class="mt-4 text-center small">
                     <span class="mr-2">
-                      <i class="fas fa-circle text-primary"></i> Azamat
+                      <i class="fas fa-circle text-primary"></i> Азамат
                     </span>
                     <span class="mr-2">
-                      <i class="fas fa-circle text-success"></i> Aliya
+                      <i class="fas fa-circle text-success"></i> Әлия
                     </span>
                     <span class="mr-2">
-                      <i class="fas fa-circle text-info"></i> Dimash
+                      <i class="fas fa-circle text-info"></i> Димаш
                     </span>
                   </div>
                   <div class="mt-4 text-center"></div>
