--- a/API-and-Admin-Panel/App/App/Website/static/css/creative.css
+++ b/API-and-Admin-Panel/App/App/Website/static/css/creative.css
@@ -9439,6 +9439,9 @@ a.text-dark:hover, a.text-dark:focus {
   color: rgba(0, 0, 0, 0.5) !important;
 }
 
+.text-black-50 {
+  color: rgba(0, 0, 0) !important;
+}
 .text-white-50 {
   color: rgba(255, 255, 255, 0.5) !important;
 }
